# sprite-flux

./: README.md  TRAINING_README.md  check_setup.py  flux_fine_tune.ipynb  pyproject.toml  quick_start.sh  requirements_training.txt  test_lora.py  test_webp_support.py  train_example.sh
docs/: dev-log.md  results.md
outputs-1/: _flux1-dev-bf16___8-by-8-retro-pixel-art-ch-5f41___seed-4.json  flux1-dev-bf16___8-by-8-retro-pixel-art-ch-5f41___seed-4___6.json  flux1-dev-retropixelfluxlora-ec18-1.00-fp16___10-by-10-retro-pixel-art-457e___seed-4_num_inference_steps-40.json  flux1-schnell-retropixelfluxlora-ec18-fp16___100-npc-characters-for-pi-ead5___seed-3.json  flux1-schnell-retropixelfluxlora-ec18-fp16___100-npc-characters-for-pi-ead5___seed-4.json  flux1-schnell-retropixelfluxlora-ec18-fp16___100-npc-characters-for-pi-ead5___seed-4_num_inference_steps-40.json  flux1-schnell-retropixelfluxlora-ec18-fp16___100-npc-characters-for-pi-ead5___seed-5.json  flux1-schnell-retropixelfluxlora-ec18-fp16___100-npc-characters-for-pi-ead5___seed-5_num_inference_steps-40.json
outputs-1024/: f1d_l80_c30___8-by-8-retro-pixel-art-ch-5f41___seed-5.json  f1d_l80_c35___8-by-8-retro-pixel-art-ch-5f41___seed-5.json  f1d_l80_c50___8-by-8-retro-pixel-art-ch-5f41___seed-5.json  f1d_l80_c90___8-by-8-retro-pixel-art-ch-5f41___seed-5.json
outputs-128/: f1d_l80_c30___8-by-8-retro-pixel-art-ch-5f41___seed-5.json
outputs-16/: f1d_l80_c30___8-by-8-retro-pixel-art-ch-5f41___seed-5.json
outputs-2/: flux1-dev-bf16___8-by-8-retro-pixel-art-ch-5f41___seed-5.json  (+2 more)
scripts/: bg_flux.py  fal_video.py  (+5 more)
(+43 files in other folders)
